  - CHANGE:
    - Remove the startup_mact_processing config entry, and replace it with content_processing_mode config entry that supports 3 values
      0 - no content preprocessing.  (default)
      1 - do content preprocessing AFTER the template page top
      2 - do content preprocessing BEFORE any template processing. 
      This config entry controls only when in the rendering, the default content block will be processed.
  - FEATURE: Adds the {disable_template} plugin.  Only really useful when content_processing_mode == 2
  - REMOVED: all options for smarty caching.  HTML caching should now be done with external tools like varnish or cloudfare
  - CHANGE: All module actions (except for showtemplate=false or other similar requests) create a new smarty template object
    and destroy it when the action is complete.  
  - CHANGE: Convert admin passwords to use PHP's builtin password_hash and password_verify methods.
    - Still backwards compatible with older style for upgrades and resetting lost passwords.
    - Users upgrading from very old versions may have to reset passwords
  - CHANGE: smarty template directories for admin requests now includes /assets/templates.
  - CHANGE: Allow svg files to be cached and deflated in the sample htaccess.txt file
  - CHANGE: Now call InitializeFrontend() and InitializeAdmin() from within ModuleOperations::_load_module() on success.  instead of the module constructor.
  - CHANGE: Now call SetParameters from within ModuleOperations::_load_module() and not from the constructor.
  - FEATURE: Adds new {theme_root} plugin for admin templates
  - FEATURE: Adds new {admin_headtext} block plugin for admin templates
  - CHANGE: Module actions can now return output rather than echoing it.
  - FEATURE: Allow login via a module (CoreAdminLogin) now is core admin module
  - FEATURE: Adds a new hook for password strength
  - CHANGE: cms_mailer class now throws an exception if attempting to send an email without setting preferences first.