@@ -77,12 +77,12 @@ Core - General
     - Remove the startup_mact_processing config entry, and replace it with content_processing_mode config entry that supports 3 values
       0 - no content preprocessing.  (default)
       1 - do content preprocessing AFTER the template page top
-      2 - do content preprocessing BEFORE any template processing. 
+      2 - do content preprocessing BEFORE any template processing.
       This config entry controls only when in the rendering, the default content block will be processed.
   - FEATURE: Adds the {disable_template} plugin.  Only really useful when content_processing_mode == 2
   - REMOVED: all options for smarty caching.  HTML caching should now be done with external tools like varnish or cloudfare
   - CHANGE: All module actions (except for showtemplate=false or other similar requests) create a new smarty template object
-    and destroy it when the action is complete.  
+    and destroy it when the action is complete.
   - CHANGE: Convert admin passwords to use PHP's builtin password_hash and password_verify methods.
     - Still backwards compatible with older style for upgrades and resetting lost passwords.
     - Users upgrading from very old versions may have to reset passwords
@@ -187,12 +187,19 @@ Core - General
   - CHANGE: Internal pretty urls are now ON by default.  To disable it you set url_rewriting to none in the config.php
   - CHANGE: enable browser caching by default
   - REMOVED: preference for automatic clearing of cache from siteprefs.  This is now handled by a config entry.
+  - FEATURE: Adds the new {cms_set_theme} plugin usable in a page template of a theme to tell the system what the current theme is.
+  - FEATURE: Adds {cms_theme_url} and {cms_theme_path} smarty plugins that return the start URL and path of the current theme.
+  - FEATURE: Adds the cms_theme smarty resource to read templates from themes located in /assets/themes/thememane
+     - Supports putting templates into a directory called 'templates' below the theme directory OR having templates in the root.
+     - Supports syntax like:  cms_thme:[theme;]template_name[;section]
+       - if the theme name is not specified then the 'current' theme {cms_set_theme} will be used.
 
 PressRoom v1.0
   - New core example module to demonstrate module development techniques.  It allows managing and displaying time limited content.
 
 CMSContentManager - 1.2
   - REMOVED: Gets rid of secure options, flag output and bulk functionaltiy
+  - REMOVED: The design dropdown option in the content editor.
   - CHANGE: modified to use CMS_ROOT_URL
   - CHANGE: Change connection timeout to 1 second.
   - CHANGE: processing to be a little more friendly to some environments wrt. content-size header.
@@ -205,7 +212,8 @@ CMSContentManager - 1.2
   - FEATURE: Each page can now display some info in the dynamic tooltip that is displayed.
   - FEATURE: Now display a warning in editcontent when locking is disabled
   - FEATURE: Now set the subtitle properly, which helps with the admin theme's title tag
-  - Removes all support for events, now uses hooks
+  - FEATURE: Now the template list will include all LayoutManager templates AND all page templates detected from themes in the /assets/themes directory.
+  - REMOVED: all support for events, now uses hooks
 
 Installation Assistant - v1.4
   - Now require at least version 2.0.1 to upgrade
@@ -258,7 +266,7 @@ Search  - v1.52
 AdminSearch v1.1
  - Rationalize the code a bit (remove un-necessary files).
  - Adds the ability to search text files within the /assets directory (excluding modules)
- - Rename of slave classes to use namespaces. 
+ - Rename of slave classes to use namespaces.
 
 DesignManager v1.1.6
  - Now properly handle renaming exported stylesheets and templates.
